fixed issue where movieDetails component was overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   height: 100%;
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.548);
   background-color: #0a2027;
+  overflow: scroll;
 }
 
 .movie-details {
